--- a/package.json
+++ b/package.json
@@ -29,8 +29,10 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
     "react-native-gesture-handler": "~1.6.0",
     "react-native-gifted-chat": "^0.16.1",
+    "react-native-progress-circle": "^2.1.0",
     "react-native-safe-area-context": "0.7.3",
     "react-native-screens": "~2.2.0",
+    "react-native-svg": "^12.1.0",
     "react-native-svg-charts": "^5.4.0",
     "react-native-web": "~0.11.7"
   },
